<resources>
    <string name="app_name">Shop Ban Hang</string>
    <string name="titleDienThoai">Điện thoại</string>
    <string name="titleLaptop">Laptop</string>
    <string name="titleDongHo">Đồng hồ</string>
    <string name="titleTrangChu">Trang chủ</string>
    <string name="titleGioHang">Giỏ hàng</string>
    <string name="titleThongTin">Thông tin</string>
    <string name="titleDonHang">Đơn Hàng</string>
    <string name="txtHoSo">Thông tin của tôi</string>
    <string name="titleThanhToan">Thanh toán</string>
    <string name="ProductNew">Sản phẩm mới nhất</string>
    <string name="txtTen">Tên</string>
    <string name="txtGia">Giá: 20000000Đ0 Đ</string>
    <string name="txtMoTa">Mô Tả</string>
    <string name="titleChiTiet">Chi tiết sản phẩm</string>
    <string name="titleTheTinDung">Thẻ tín dụng</string>
    <string name="btnGioHang">Thêm vào giỏ hàng</string>
    <string name="btnMuaHang">Mua hàng</string>
    <string name="btnTiepTucMuaHang">Tiếp tục mua hàng</string>
    <string name="btnThanhToan">Thanh toán</string>
    <string name="titleMoTaChiTiet">Mô tả chi tiết sản phẩm</string>
    <string name="txtMoTaChiTiet">Mô tả chi tiết sản phẩm</string>
    <string name="txtGioHang">Giỏ hàng trống</string>
    <string name="txtTongTien">Tổng tiền: </string>
    <string name="txtGioHangTenSP">Tên sản phẩm</string>
    <string name="txtTongTienThanhToan">0</string>
    <string name="btnDangNhap">Đăng nhập</string>
    <string name="btnDangKy">Đăng ký</string>
    <string name="hintEmail">Nhập email</string>
    <string name="hintEmailKhoiPhuc">Nhập email muốn khôi phục</string>
    <string name="hintDiaChi">Nhập địa chỉ giao hàng</string>
    <string name="hintPassword">Nhập mật khẩu</string>
    <string name="hint_re_enter_password">Nhập lại mật khẩu</string>
    <string name="txtDangKy">Đăng ký</string>
    <string name="titleSearch">Tìm kiếm</string>
    <string name="hintSDT">Nhập số điện thoại</string>
    <string name="hintUserName">Nhập tên người dùng</string>
    <string name="txtQuenMatKhau">Quên mật khẩu?</string>
    <string name="btnKhoiPhucMatKhau">Khôi phục mật khẩu</string>
    <string name="apiMapsKey">AIzaSyCpdW7HHJx1xyxsvkCtjKLoWcU6Bhl2fr0</string>
    <string name="txtInformationCall">Thông tin liên hệ</string>
    <string name="btnDatHang">đặt hàng</string>
    <string name="btnDangXuat">Đăng xuất</string>
    <string name="btnLichSuMuaHang">Lịch sử mua hàng</string>
    <string name="btnHoanThanh">Hoàn thành</string>
    <string name="btnThayDoi">Thay đổi</string>
    <string name="titleMyInformation">Thông tin cá nhân</string>
    <string name="titileDoiMatKhau">Đổi mật khẩu</string>
    <string name="titleDoiSoDienThoai">Điện thoại</string>
    <string name="txtSoLuongMatHang">Số lượng mặt hàng</string>
    <string name="hintNhapMatKhauCu">Nhập mật khẩu cũ</string>
    <string name="hintNhapMatKhauMoi">Nhập mật khẩu mớĩ</string>
    <string name="txtSearch">Không tìm thấy sản phẩm</string>
</resources>