<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GioHangActivity">
    <TextView
        android:id="@+id/txtGioHang"
        android:text="@string/txtGioHang"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGioHang"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/titleGioHang"
        android:background="@color/backgroundGioHang"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGioHang"
        app:layout_constraintTop_toBottomOf="@id/toolbarGioHang"
        app:layout_constraintBottom_toTopOf="@id/layout2"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <LinearLayout
        android:id="@+id/layout2"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/backgroundGioHang"
            android:text="@string/txtTongTien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtTongTien"
            android:layout_weight="1"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:textColor="@color/backgroundGioHang"
            android:text="@string/txtTongTienThanhToan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:text="@string/btnMuaHang"
        android:id="@+id/btnMuaHang"
        android:background="@drawable/button_thanh_toan"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <Button
            android:text="@string/btnTiepTucMuaHang"
            android:id="@+id/btnTiepTucMuaHang"
            android:background="@drawable/button_thanh_toan"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>