<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_gravity="top"
        android:id="@+id/toolbarChangePassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="@string/titileDoiMatKhau"/>

    <EditText
        android:hint="@string/hintNhapMatKhauCu"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/edtPasswordOld"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/hintNhapMatKhauMoi"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:id="@+id/edtChangePassword"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:id="@+id/txtErrorPassword"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnThayDoi"/>
</LinearLayout>