<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChiTietActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbarChiTietSanPham"
        app:title="@string/titleChiTiet"
        android:background="@color/backgroundChiTiet">
    <FrameLayout
        android:id="@+id/frameGioHang"
        style="?attr/actionButtonStyle"
        android:layout_gravity="right"
        android:clipToPadding="false"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/menu_soluong"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right|end|top"
            android:layout_marginEnd="-1dp"
            android:layout_marginRight="-5dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_count_cart"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="0"
            android:textSize="14sp"/>
        <ImageView
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_cart"
            android:layout_width="35dp"
            android:layout_height="35dp"/>
    </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarChiTietSanPham"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/imgChiTietSanPham"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            >
            <TextView
                android:id="@+id/txtTenSanPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/txtTen"
                />

            <TextView
                android:id="@+id/txtGiaSanPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:text="@string/txtGia"
                android:textColor="@color/backgroundChiTiet"
                android:layout_marginStart="20dp"
                />
            <Spinner
                android:id="@+id/spinnerSoLuong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/soluongchitietsanpham"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            <Button
                android:id="@+id/btnThemVaoGioHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/btnGioHang"
                android:gravity="center"
                android:background="@drawable/background_btn_add_cart"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/titleMoTaChiTiet"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtMoTaChiTietSanPham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>