<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ThanhToanActivity">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbarThanhToan"
        app:title="@string/titleThanhToan"
        android:background="@color/backgroundHome"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <LinearLayout
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btnThanhToan"
        app:layout_constraintTop_toBottomOf="@id/toolbarThanhToan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cartView1"
            app:cardCornerRadius="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/ic_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txtTongTienThanhToan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtTongTienThanhToan"
                        android:textColor="@color/txtGia"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                </LinearLayout>

                <View
                    android:layout_marginTop="10dp"
                    android:background="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintSDT"
                        android:inputType="phone"
                        android:textColorHint="@color/txtGia"
                        android:id="@+id/edtSDTThanhToan">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_marginTop="10dp"
                    android:background="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintEmail"
                        android:textColorHint="@color/txtGia"
                        android:id="@+id/edtEmailThanhToan">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_marginTop="10dp"
                    android:background="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.textfield.TextInputLayout
            android:background="@color/white"
            android:id="@+id/txtInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintDiaChi"
                android:textColorHint="@color/txtGia"
                android:id="@+id/edtLocation">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginBottom="10dp"
        android:id="@+id/btnThanhToan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/backround_button"
        android:text="@string/btnDatHang"/>
</androidx.constraintlayout.widget.ConstraintLayout>